# CleanFolder_App

./: README.md  by_skiff.py  main.py  pyproject.toml  qt_design.py  register_extensions.py
for mac/: folder.icns
for_mac/: main.py  qt_design.py
for_windows/: main.py  qt_design.py
