[tool.poetry]
name = "cleanfolder_app"
version = "0.0.1"
description = "This app is for organizing files in your folders"
authors = ["Vladyslav Babenko <vlad_bb@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
